--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 <header>
-<h1>Akram Website</h1>
+<h1>Akram Path</h1>
 <nav>
     <ul>
         <li><a href="#">Home</a></li>
@@ -35,9 +35,9 @@
 </section>
 
 <section>
-<h1>Section 3</h1>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, quod!</p>
-<img src="image3.jpg" alt="Image 3">
+<h1>Druid</h1>
+<p>Auto attack build</p>
+<img src="./img/Diablo-4-Druid-Header.png" alt="Image 3">
 </section>
 
 <section>
