--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
 </section>
 
 <section>
-<h1>Items Found</h1>
+<h1>Legendary Items Found</h1>
 <p id="count">0</p>
 </section>
 
 <section>
 <h1>Druid</h1>
 <p>Auto attack build</p>
-<img src="./img/Diablo-4-Druid-Header.png" alt="Image 3">
+<img id="druid-image" src="./img/Diablo-4-Druid-Header.png" alt="Image 3">
 </section>
 
 <section>
-<h1>Section 4</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quidem.</p>
-<img src="image4.jpg" alt="Image 4">
+<h1>Altar of Lilith Locations</h1>
+<p>FRACTURED PEAKS</p>
+<img src="./img/lilith.jpg" alt="Image 4">
 </section>
 
 <section>
 <h1>Section 5</h1>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, beatae.</p>
+<p></p>
 <img src="image5.jpg" alt="Image 5">
 </section>
 
